refactor : field(속성) -> fieldName(enum)으로 변경에 따른 코드 변화