@@ -14,7 +14,6 @@ import com.sendback.domain.user.dto.response.CheckUserNicknameResponseDto;
 import com.sendback.domain.user.dto.request.SignUpRequestDto;
 import com.sendback.domain.user.dto.response.UpdateUserInfoResponseDto;
 import com.sendback.domain.user.dto.response.UserInfoResponseDto;
-import com.sendback.domain.user.entity.Career;
 import com.sendback.domain.user.entity.Level;
 import com.sendback.domain.user.entity.User;
 import com.sendback.domain.user.repository.UserRepository;
@@ -51,9 +50,8 @@ public class UserService {
         SigningAccount signingAccount = jwtProvider.getSignUserInfo(signUpRequestDto.signToken());
         User user = User.of(signingAccount, signUpRequestDto);
         User savedUser = userRepository.save(user);
-        List<Field> fieldList = new ArrayList<>();
-        signUpRequestDto.interests().stream()
-                .map(interest -> Field.of(FieldName.toEnum(interest), user))
+        List<Field> fieldList = signUpRequestDto.interests().stream()
+                .map(interests -> Field.of(FieldName.toEnum(interests), user))
                 .collect(Collectors.toList());
         fieldService.saveAll(fieldList);
         return jwtProvider.issueToken(savedUser.getId());
@@ -78,10 +76,11 @@ public class UserService {
         List<Field> fieldList = fieldRepository.findAllByUserId(userId);
         List<String> fieldNameList = fieldList.stream()
                 .map(Field::getName)
-                .collect(Collectors.toList());
+                .map(FieldName::getName)
+                .toList();
         Long needToFeedbackCount = Level.getRemainCountUntilNextLevel(feedbackCount);
         UserInfoResponseDto responseDto = new UserInfoResponseDto(user.getNickname(),
-                Career.toString(user.getCareer()), user.getProfileImageUrl(), user.getBirthDay(),
+                user.getCareer().getValue(), user.getProfileImageUrl(), user.getBirthDay(),
                 user.getEmail(), fieldNameList, Level.toNumber(user.getLevel()), feedbackCount, needToFeedbackCount,
                 projectCount, likeCount);
         return responseDto;
@@ -95,7 +94,7 @@ public class UserService {
         user.update(updateUserInfoRequestDto);
         fieldRepository.deleteByUserId(userId);
         List<Field> fieldList = updateUserInfoRequestDto.field().stream()
-                .map(intersts -> Field.of(intersts, user))
+                .map(intersts -> Field.of(FieldName.toEnum(intersts), user))
                 .collect(Collectors.toList());
         fieldRepository.saveAll(fieldList);
         return new UpdateUserInfoResponseDto(updateUserInfoRequestDto.nickname(), updateUserInfoRequestDto.birthday(),
